https://github.com/daxitsolutions/osx_samourai-project-manager/issues/9
