# documentation/api/openapi.yaml
@@ -1888,6 +1888,7 @@ components:
       - id
       - projectID
       - scenarioID
+      - displayOrder
       - hierarchyLevel
       - title
       - estimatedStartDate
@@ -1907,6 +1908,10 @@ components:
         parentActivityID:
           "$ref": "#/components/schemas/Uuid"
           nullable: true
+        displayOrder:
+          type: integer
+          minimum: 0
+          description: Ordre d'affichage manuel de l'activité dans son scénario.
         hierarchyLevel:
           "$ref": "#/components/schemas/ActivityHierarchyLevel"
         title:
